--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -10,9 +10,14 @@ on:
 jobs:
   verify:
     if: ${{ !contains( github.event.pull_request.labels.*.name, 'skip ci' ) }}
-    uses: ./.github/workflows/verify-workflow.yaml
+    uses: cloud-native-toolkit/action-workflows/.github/workflows/verify-gitops-module.yaml@v1
+    with:
+      testcase: ocp4_latest_gitops
     secrets:
+      AWS_CLUSTER_USERNAME: ${{ secrets.AWS_CLUSTER_USERNAME }}
+      AWS_CLUSTER_PASSWORD: ${{ secrets.AWS_CLUSTER_PASSWORD }}
       IBMCLOUD_API_KEY: ${{ secrets.IBMCLOUD_API_KEY }}
+      CP_ENTITLEMENT_KEY: ${{ secrets.CP_ENTITLEMENT_KEY }}
 
   verifyMetadata:
     uses: cloud-native-toolkit/action-workflows/.github/workflows/verify-module-metadata.yaml@v1
